Adds posts section & nav links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,8 +66,8 @@ const metas = {
     <PageSection>
         <SectionHeading>Where I work</SectionHeading>
         <div class="mb-12">
-            <Link href="https://kirschbaumdevelopment.com"
-                >Visit Kirschbaum
+            <Link href="https://kirschbaumdevelopment.com">
+                Visit Kirschbaum
             </Link>
         </div>
         <div class="mb-10">
@@ -95,5 +95,14 @@ const metas = {
             products and services to market quickly, while anticipating the need
             to scale and adapt as your business requirements evolve.
         </Paragraph>
+    </PageSection>
+
+    <PageSection>
+        <SectionHeading>Featured Posts</SectionHeading>
+        <div class="mb-12">
+            <Link href="/posts">
+                Browse more posts
+            </Link>
+        </div>
     </PageSection>
 </Layout>
