Fixes z-index issue with section header

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -9,7 +9,7 @@ import { Navbar } from "../components/navigation/Navbar";
     <head>
         <slot name="head" />
     </head>
-    <body class="bg-black-light text-white-alt font-normal bg-site-gradient drop-shadow-lg">
+    <body class="bg-black-light text-white-alt font-normal">
         <Navbar client:visible />
         <slot />
     </body>
