Moves default metas back to layout file

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -8,6 +8,9 @@ import { SiteFooter } from "../components/layout/SiteFooter";
 <!doctype html>
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
         <slot name="head" />
     </head>
     <body class="bg-black-light text-white-alt font-normal">
