Adds customization to typography plugin for blog

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -13,7 +13,7 @@ import { SiteFooter } from "../components/layout/SiteFooter";
 
         <slot name="head" />
     </head>
-    <body class="bg-black-light text-white-alt font-normal">
+    <body class="bg-black-light text-white-alt font-normal antialiased">
         <Navbar client:visible />
         <slot />
         <SiteFooter />
