--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -5,14 +5,14 @@ import { Paragraph } from "../components/typography/Paragraph";
 import Layout from "./layout.astro";
 
 const { content } = Astro.props;
-
-type Categories = Array<string>;
 ---
 
 <Layout>
     <PageSection hasXPadding={false} isTop={true}>
-        <PageHeading isBlog={true}>{content.title}</PageHeading>
-        <div class="my-12">
+        <div class="px-6">
+            <PageHeading isBlog={true}>{content.title}</PageHeading>
+        </div>
+        <div class="px-6 my-12">
             <Paragraph>{content.description}</Paragraph>
         </div>
         <img
@@ -21,19 +21,15 @@ type Categories = Array<string>;
             alt={content.featuredImageAlt}
         />
         <div
-            class="flex justify-start items-center gap-1 text-sm font-light px-6"
+            class="flex justify-start items-center gap-3 text-sm font-light px-6"
         >
-            {content.categories.map(
-                (category: string, index: number, array: Categories) => {
-                    return <span class="inline-block">{category},</span>;
-                }
-            )}
+            {content.categories.join(", ")}
             <hr class="site-gradient h-0.5 w-8 rounded-lg border-none" />
             <span>{content.publishedAt}</span>
         </div>
     </PageSection>
 
-    <div class="prose dark:prose-invert px-6">
+    <div class="prose antialiased prose-gruvbox px-6 mb-12">
         <slot />
     </div>
 </Layout>
